<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/tab_tv"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_tv" />


    <item
        android:id="@+id/tab_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />



</menu>
