<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".modules.mainactivity.telefragment.TeleViFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_televi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/movie_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>